<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/gradient_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity">

    <LinearLayout
        android:id="@+id/linearLayoutContainer"
        android:gravity="center"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/lyimageView"
            android:layout_width="184dp"
            android:layout_height="184dp"
            android:contentDescription="@string/descripcion_logo"
            android:src="@drawable/ic_logo_1_sbg" />

        <TextView
            android:id="@+id/lytextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_dolphin_tech"
            android:textSize="32sp"
            android:textColor="#0A2B43"
            android:textStyle="bold" />

        <TextView
            android:textColor="#0A2B43"
            android:id="@+id/lytextViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/text_view_1"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutContainer2"
        android:layout_width="286dp"
        android:layout_height="104dp"
        android:orientation="vertical"
        android:layout_marginTop="173dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <!-- Botón de Facebook -->
        <LinearLayout
            android:id="@+id/buttonPanelFacebook"
            android:layout_width="286dp"
            android:layout_height="44dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/bg_facebook"
            android:paddingVertical="2dp"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_facebook"
                android:contentDescription="@string/logo_de_facebook"
                android:layout_marginEnd="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_facebook"
                android:textColor="#F3FAFF"
                android:textSize="14sp"/>
        </LinearLayout>

        <!-- Botón de Google -->
        <LinearLayout
            android:id="@+id/buttonPanelGoogle"
            android:layout_width="286dp"
            android:layout_height="44dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/bg_google"
            android:paddingVertical="10dp"
            android:paddingHorizontal="20dp"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_google"
                android:layout_marginEnd="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_google"
                android:textColor="#0A2B43"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:textColor="#0A2B43"
        android:id="@+id/textView3"
        android:layout_width="286dp"
        android:layout_height="36dp"
        android:text="@string/text_footer"
        android:textSize="12sp"
        android:layout_marginTop="116dp"
        android:textAlignment="center"

        app:layout_constraintTop_toBottomOf="@id/linearLayoutContainer2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>