<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_background"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <!-- Barra superior con logo y título -->
    <LinearLayout
        android:id="@+id/linearLayoutContainer"
        android:gravity="center_vertical"
        android:layout_width="380dp"
        android:layout_height="33.23dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/lytextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_dolphin_tech"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/lyimageView"
            android:layout_width="33.23dp"
            android:layout_height="33.23dp"
            android:contentDescription="@string/descripcion_img_user" />
    </LinearLayout>

    <!-- Mensaje de bienvenida -->
    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_bienvenida"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewChat"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutContainer"
        app:layout_constraintBottom_toTopOf="@id/editTextContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Caja de texto y botón de enviar -->
    <LinearLayout
        android:id="@+id/editTextContainer"
        android:layout_width="380dp"
        android:layout_height="41dp"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_edittext"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/editText"
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/hint_text"
            android:padding="10dp"
            android:textColorHint="#999999"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/sendButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_send"
            android:padding="8dp"
            android:scaleType="centerInside"
            android:contentDescription="@string/text_enviar"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
